MOD: remove security from gate way and add config route

--- a/config-git-repository/restoffice-gateway-server-development.yml
+++ b/config-git-repository/restoffice-gateway-server-development.yml
@@ -1,18 +1,17 @@
 zuul:
-  add-proxy-headers: true
   ignored-services: '*'
+  sensitiveHeaders:
   prefix: /api
   routes:
     restoffice-transaction-service:
       path: /transaction/**
       service-id: restoffice-transaction-service
       strip-prefix: true
-#    restoffice-config-server:
-#      path: /config/**
-#      service-id: restoffice-config-server
-#      strip-prefix: true
     restoffice-authorization-server:
       path: /auth/**
       service-id: restoffice-authorization-server
       strip-prefix: true
-      sensitiveHeaders:
+    restoffice-config-server:
+      path: /config/**
+      service-id: restoffice-config-server
+      strip-prefix: true
