--- a/restoffice-transaction-service/build.gradle
+++ b/restoffice-transaction-service/build.gradle
@@ -29,15 +29,19 @@ ext {
 	springCloudVersion = 'Finchley.M9'
 }
 
+configurations {
+    compile.exclude module: 'spring-boot-starter-logging'
+}
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-log4j2')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.cloud:spring-cloud-starter-config')
 	compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
     compile('org.springframework.cloud:spring-cloud-starter-security')
-    
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
