ADD: aspectj logging

--- a/restoffice-transaction-service/src/main/resources/application.yml
+++ b/restoffice-transaction-service/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
     virtual-host: kvnxlsmi
     username: kvnxlsmi
     password: r1TfFMXjTji1aF5fvcocImuP05rhA17j
+aspect:
+  logging:
+    component:
+      enabled: true
