--- a/restoffice-transaction-service/src/main/resources/bootstrap.yml
+++ b/restoffice-transaction-service/src/main/resources/bootstrap.yml
@@ -6,16 +6,38 @@ spring:
   profiles:
     active:
     - development
+---
+spring:
+  profiles: development
+  cloud:
+    config:
+      enabled: false
+    bus:
+      enabled: false
+eureka:
+  client:
+    enabled: false
+server:
+  port: 8080
+aspect:
+  logging:
+    component:
+      enabled: true
+security:
+  ignored: /**
+---
+spring:
+  profiles: test
   cloud:
     config:
       discovery:
         enabled: true
         service-id: restoffice-config-server
-      fail-fast: false
+      fail-fast: true
 eureka:
   client:
 #    serviceUrl:
 #      defaultZone: http://localhost:8761/eureka/
     fetch-registry: true
 #    register-with-eureka: true
-#    enabled: true
+#    enabled: true       
