--- a/restoffice-transaction-service/src/main/resources/bootstrap.yml
+++ b/restoffice-transaction-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: restoffice-transaction-service
   profiles:
     active:
-    - development
+    - test
 aspect:
   logging:
     component:
