--- a/restoffice-commons/build.gradle
+++ b/restoffice-commons/build.gradle
@@ -26,24 +26,27 @@ repositories {
 
 
 ext {
-    springCloudVersion = 'Finchley.RC1'
+    springCloudVersion = 'Finchley.M9'
 }
 
+
+jar {
+    enabled = true
+}
+bootJar{
+    enabled = false
+}
 configurations {
     compile.exclude module: 'spring-boot-starter-logging'
 }
 dependencies {
-    compile files('../restoffice-commons/build/libs/restoffice-commons-0.0.1-SNAPSHOT.jar')
-    compile('org.springframework.boot:spring-boot-starter-log4j2')
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
+    compile('org.springframework.boot:spring-boot-starter-log4j2')
     compile('org.springframework.cloud:spring-cloud-starter-config')
-    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
     compile('org.springframework.cloud:spring-cloud-starter-oauth2')
     compile('org.springframework.cloud:spring-cloud-starter-security')
-    runtime('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
