--- a/restoffice-cashregister-service/src/main/resources/bootstrap.yml
+++ b/restoffice-cashregister-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: restoffice-cashregister-service
   profiles:
     active:
-    - development
+    - test
   jpa:
     open-in-view: false
 ---
