--- a/restoffice-transaction-service/src/main/resources/bootstrap.yml
+++ b/restoffice-transaction-service/src/main/resources/bootstrap.yml
@@ -3,9 +3,13 @@ spring:
     name: restoffice-cashregister-service
   profiles:
     active:
-    - development
+    - test
   jpa:
     open-in-view: false
+aspect:
+  logging:
+    component:
+      enabled: true
 ---
 server:
   port: 8080
@@ -21,10 +25,6 @@ spring:
 eureka:
   client:
     enabled: false
-aspect:
-  logging:
-    component:
-      enabled: true
 ---
 server:
   port: 0
@@ -36,8 +36,9 @@ spring:
         enabled: true
         service-id: restoffice-config-server
       fail-fast: true
-
+#eureka client config
 eureka:
   client:
     fetch-registry: true
-    
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
