ADD: token uri for security cofig

--- a/config-git-repository/restoffice-gateway-server-development.yml
+++ b/config-git-repository/restoffice-gateway-server-development.yml
@@ -19,3 +19,6 @@ zuul:
       path: /cash-register/**
       service-id: restoffice-cashregister-service
       strip-prefix: true
+restoffice:
+  auth-endpoint:
+    url: /api/auth/oauth/token
