--- a/restoffice-gateway-server/build.gradle
+++ b/restoffice-gateway-server/build.gradle
@@ -28,13 +28,20 @@ repositories {
 ext {
 	springCloudVersion = 'Finchley.RC1'
 }
-
+configurations {
+    compile.exclude module: 'spring-boot-starter-logging'
+}
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.cloud:spring-cloud-starter-config')
+	compile('org.springframework.boot:spring-boot-starter-log4j2')
+	
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')	
 	compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
+	
+	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
+    compile('org.springframework.cloud:spring-cloud-starter-security')
 	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
