--- a/restoffice-dailyclose-service/build.gradle
+++ b/restoffice-dailyclose-service/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
 //compile files('../restoffice-commons/build/libs/restoffice-commons-0.0.1-SNAPSHOT.jar')
 
+    compile("org.springframework.boot:spring-boot-starter-hateoas")
     compile('org.springframework.cloud:spring-cloud-starter-oauth2')
     compile('org.springframework.cloud:spring-cloud-starter-security')
     
