--- a/restoffice-transaction-service/src/main/resources/bootstrap.yml
+++ b/restoffice-transaction-service/src/main/resources/bootstrap.yml
@@ -1,9 +1,10 @@
+
 spring:
   application:
     name: restoffice-cashregister-service
   profiles:
     active:
-    - test
+    - development
   jpa:
     open-in-view: false
 aspect:
@@ -36,9 +37,3 @@ spring:
         enabled: true
         service-id: restoffice-config-server
       fail-fast: true
-#eureka client config
-eureka:
-  client:
-    fetch-registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
