--- a/config-git-repository/application.yml
+++ b/config-git-repository/application.yml
@@ -19,3 +19,6 @@ eureka:
   client:
     healthcheck:
       enabled: true
+    fetch-register: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
