--- a/restoffice-cashregister-service/build.gradle
+++ b/restoffice-cashregister-service/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-oauth2')
     compile('org.springframework.cloud:spring-cloud-starter-security')
     runtime('com.h2database:h2')
+    
+    testRuntime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
