--- a/restoffice-gateway-server/src/main/resources/bootstrap.yml
+++ b/restoffice-gateway-server/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     name: restoffice-gateway-server
   profiles:
     active:
-    - development
+    - test
   cloud:
     config:
       discovery:
@@ -17,11 +17,13 @@ spring:
       fail-fast: true
 eureka:
   client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
     fetch-registry: true
-#    register-with-eureka: true
-#    enabled: true
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-      
-      
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 600000
